--- a/learn-m365-pr/wwl/describe-support-offerings-for-microsoft-365-services/index.yml
+++ b/learn-m365-pr/wwl/describe-support-offerings-for-microsoft-365-services/index.yml
@@ -3,9 +3,9 @@ uid: learn.wwl.describe-support-offerings-for-microsoft-365-services
 metadata:
   title: Describe support offerings for Microsoft 365 services
   description: "Describe support offerings for Microsoft 365 services"
-  ms.date: 04/19/2022
+  ms.date: 04/20/2022
   author: wwlpublish
-  ms.author: dahans
+  ms.author: asglenno
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Describe support offerings for Microsoft 365 services
