--- a/learn-m365-pr/wwl/describe-service-life-cycle-microsoft-365/index.yml
+++ b/learn-m365-pr/wwl/describe-service-life-cycle-microsoft-365/index.yml
@@ -3,9 +3,9 @@ uid: learn.wwl.describe-service-life-cycle-microsoft-365
 metadata:
   title: Describe the service life cycle in Microsoft 365
   description: "Describe the service life cycle in Microsoft 365"
-  ms.date: 04/19/2022
+  ms.date: 04/20/2022
   author: wwlpublish
-  ms.author: dahans
+  ms.author: asglenno
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Describe the service life cycle in Microsoft 365
