--- a/learn-m365-pr/wwl/introduction-to-identity-synchronization/2-examine-authentication-options-microsoft-365.yml
+++ b/learn-m365-pr/wwl/introduction-to-identity-synchronization/2-examine-authentication-options-microsoft-365.yml
@@ -4,12 +4,13 @@ title: Examine authentication options in Microsoft 365
 metadata:
   title: Examine authentication options in Microsoft 365
   description: "Examine authentication options in Microsoft 365"
-  ms.date: 07/12/2021
+  ms.date: 04/20/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 3
 content: |
   [!include[](includes/2-examine-authentication-options-microsoft-365.md)]
