--- a/learn-m365-pr/wwl/introduction-to-identity-synchronization/4-explore-directory-synchronization.yml
+++ b/learn-m365-pr/wwl/introduction-to-identity-synchronization/4-explore-directory-synchronization.yml
@@ -4,12 +4,13 @@ title: Explore directory synchronization
 metadata:
   title: Explore directory synchronization
   description: "Explore directory synchronization"
-  ms.date: 07/12/2021
+  ms.date: 04/20/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 4
 content: |
   [!include[](includes/4-explore-directory-synchronization.md)]
