--- a/learn-m365-pr/wwl/manage-synchronized-identities/3-manage-groups-with-directory-synchronization.yml
+++ b/learn-m365-pr/wwl/manage-synchronized-identities/3-manage-groups-with-directory-synchronization.yml
@@ -4,12 +4,13 @@ title: Manage groups with directory synchronization
 metadata:
   title: Manage groups with directory synchronization
   description: "Manage groups with directory synchronization"
-  ms.date: 07/12/2021
+  ms.date: 04/20/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 3
 content: |
   [!include[](includes/3-manage-groups-with-directory-synchronization.md)]
