--- a/learn-m365-pr/wwl/prepare-identity-synchronization-microsoft-365/2-plan-your-azure-active-directory-deployment.yml
+++ b/learn-m365-pr/wwl/prepare-identity-synchronization-microsoft-365/2-plan-your-azure-active-directory-deployment.yml
@@ -6,7 +6,9 @@ metadata:
   description: "Plan your Azure Active Directory deployment"
   ms.date: 04/20/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 9
