--- a/learn-m365-pr/wwl/prepare-identity-synchronization-microsoft-365/4-choose-directory-synchronization-tool.yml
+++ b/learn-m365-pr/wwl/prepare-identity-synchronization-microsoft-365/4-choose-directory-synchronization-tool.yml
@@ -6,7 +6,9 @@ metadata:
   description: "Choose your directory synchronization tool"
   ms.date: 04/20/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 8
