--- a/learn-m365-pr/wwl/prepare-identity-synchronization-microsoft-365/6-plan-azure-ad-connect-cloud-sync.yml
+++ b/learn-m365-pr/wwl/prepare-identity-synchronization-microsoft-365/6-plan-azure-ad-connect-cloud-sync.yml
@@ -6,7 +6,9 @@ metadata:
   description: "Plan for directory synchronization using Azure AD Connect Cloud Sync"
   ms.date: 04/20/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 4
