--- a/learn-m365-pr/wwl/manage-synchronized-identities/5-configure-object-filters-directory-synchronization.yml
+++ b/learn-m365-pr/wwl/manage-synchronized-identities/5-configure-object-filters-directory-synchronization.yml
@@ -6,7 +6,9 @@ metadata:
   description: "Configure object filters for directory synchronization"
   ms.date: 04/20/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 6
