--- a/learn-m365-pr/wwl/manage-synchronized-identities/index.yml
+++ b/learn-m365-pr/wwl/manage-synchronized-identities/index.yml
@@ -11,11 +11,12 @@ metadata:
 title: Manage synchronized identities
 summary: This module examines how to manage user identities when Azure AD Connect is configured, how to manage users and groups in Microsoft 365 with Azure AD Connect, and how to maintain directory synchronization.
 abstract: |
-  By the end of this module, you will be able to:
+  By the end of this module, you'll be able to:
   *   Ensure your users synchronize efficiently
   *   Deploy Azure AD Connect
   *   Manage groups with directory synchronization
   *   Use Azure AD Connect Sync Security Groups to help maintain directory synchronization
+  *   Configure object filters for directory synchronization
   *   Troubleshoot directory synchronization using various troubleshooting tasks and tools
 prerequisites: |
   None
