--- a/learn-m365-pr/wwl/configure-message-transport/index.yml
+++ b/learn-m365-pr/wwl/configure-message-transport/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.configure-message-transport
 metadata:
   title: Configure message transport
   description: "Configure message transport"
-  ms.date: 04/14/2022
+  ms.date: 04/21/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -26,6 +26,7 @@ products:
 - office
 - office-365
 - office-exchange-server
+- office-exchange-online
 units:
 - learn.wwl.configure-message-transport.introduction
 - learn.wwl.configure-message-transport.options
