--- a/learn-m365-pr/wwl/explore-messaging-compliance-microsoft-365/2-examine-message-policy-compliance.yml
+++ b/learn-m365-pr/wwl/explore-messaging-compliance-microsoft-365/2-examine-message-policy-compliance.yml
@@ -4,7 +4,7 @@ title: Examine message policy and compliance
 metadata:
   title: Examine message policy and compliance
   description: "Examine message policy and compliance"
-  ms.date: 03/09/2022
+  ms.date: 04/22/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -21,10 +21,10 @@ quiz:
     choices:
     - content: "eDiscovery"
       isCorrect: false
-      explanation: "That's incorrect. eDiscovery allows you to search mailbox data across your Exchange organization and create eDiscovery cases to organize compliance relevant search operations. Try again."
+      explanation: "That's incorrect. eDiscovery allows you to search mailbox data across your Exchange organization and create eDiscovery cases to organize compliance relevant search operations."
     - content: "In-place archiving"
       isCorrect: true
       explanation: "That's correct. In-place archiving helps you regain control of your organization's messaging data by eliminating the need for personal store (.pst) files and allowing users to store messages in an archive mailbox accessible in Outlook and Outlook on the web."
     - content: "Retention policies"
       isCorrect: false
-      explanation: "That's incorrect. Retention policies enable you to keep or delete mailbox content based on policies to follow regulatory and legal rules. Try again."
+      explanation: "That's incorrect. Retention policies enable you to keep or delete mailbox content based on policies to follow regulatory and legal rules."
