--- a/learn-m365-pr/wwl/explore-messaging-compliance-microsoft-365/index.yml
+++ b/learn-m365-pr/wwl/explore-messaging-compliance-microsoft-365/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.explore-messaging-compliance-microsoft-365
 metadata:
   title: Explore messaging compliance in Microsoft 365
   description: "Explore messaging compliance in Microsoft 365"
-  ms.date: 03/09/2022
+  ms.date: 04/22/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -15,7 +15,6 @@ abstract: |
   - Describe different policy and compliance features for messaging.
   - Evaluate the different administrator roles in Microsoft 365.
   - Plan retention policies for Exchange Online mailboxes.
-  - Configure data loss prevention policies in Microsoft 365.
   - Create message traces to understand the mail flow in your Exchange Online organization.
 prerequisites: ""
 iconUrl: /learn/achievements/m365-messaging-compliance.svg
@@ -28,12 +27,12 @@ products:
 - office
 - office-365
 - office-exchange-server
+- office-exchange-online
 units:
 - learn.wwl.explore-messaging-compliance-microsoft-365.introduction
 - learn.wwl.explore-messaging-compliance-microsoft-365.examine-message-policy-compliance
 - learn.wwl.explore-messaging-compliance-microsoft-365.explore-permission-model
 - learn.wwl.explore-messaging-compliance-microsoft-365.configure-retention-policies
-- learn.wwl.explore-messaging-compliance-microsoft-365.configure-data-loss-prevention-policies
 - learn.wwl.explore-messaging-compliance-microsoft-365.run-message-trace
 - learn.wwl.explore-messaging-compliance-microsoft-365.knowledge-check
 - learn.wwl.explore-messaging-compliance-microsoft-365.summary
