--- a/learn-m365-pr/wwl/manage-exchange-online-archiving-auditing/4-manage-administrator-mailbox-auditing.yml
+++ b/learn-m365-pr/wwl/manage-exchange-online-archiving-auditing/4-manage-administrator-mailbox-auditing.yml
@@ -4,7 +4,7 @@ title: Manage administrator and mailbox auditing
 metadata:
   title: Manage administrator and mailbox auditing
   description: "Manage administrator and mailbox auditing"
-  ms.date: 03/09/2022
+  ms.date: 04/22/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -21,10 +21,10 @@ quiz:
     choices:
     - content: "Holly doesn't have to do anything, since mailbox audit logging is activated by default in Exchange Server"
       isCorrect: false
-      explanation: "That's incorrect. Mailbox audit logging is activated by default in Exchange Online but not Exchange Server. Try again."
+      explanation: "That's incorrect. Mailbox audit logging is activated by default in Exchange Online but not Exchange Server."
     - content: "Activate audit logging for all mailboxes using the Exchange admin center"
       isCorrect: false
-      explanation: "That's incorrect. You can't use the Exchange admin center to enable or disable mailbox audit logging. In addition, audit logging is enabled per mailbox and not all mailboxes at one time. Try again."
+      explanation: "That's incorrect. You can't use the Exchange admin center to enable or disable mailbox audit logging. In addition, audit logging is enabled per mailbox and not all mailboxes at one time."
     - content: "Activate audit logging for the specific mailbox using the Exchange Management Shell"
       isCorrect: true
       explanation: "That's correct. Mailbox audit logging must be activated manually per mailbox in Exchange Server. You can't use the Exchange admin center (EAC) to enable or disable mailbox audit logging. Instead, you must use the Exchange Management Shell to enable mailbox audit logging."
