--- a/learn-m365-pr/wwl/manage-exchange-online-archiving-auditing/5-knowledge-check.yml
+++ b/learn-m365-pr/wwl/manage-exchange-online-archiving-auditing/5-knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   title: Knowledge check
   description: "Knowledge check"
-  ms.date: 03/09/2022
+  ms.date: 04/22/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -24,29 +24,29 @@ quiz:
       explanation: "That's correct. In Microsoft 365, the maximum number of journal rules that you can create is 10."
     - content: "25"
       isCorrect: false
-      explanation: "That's incorrect. This item isn't the maximum number of journal rules that you can create in Microsoft 365. Try again."
+      explanation: "That's incorrect. This item isn't the maximum number of journal rules that you can create in Microsoft 365."
     - content: "50"
       isCorrect: false
-      explanation: "That's incorrect. This item isn't the maximum number of journal rules that you can create in Microsoft 365. Try again."
+      explanation: "That's incorrect. This item isn't the maximum number of journal rules that you can create in Microsoft 365."
   - content: "Contoso has an on-premises Exchange Server deployment. As the Messaging administrator for Contoso, Holly Dickson disabled a user's archiving mailbox for troubleshooting purposes. What happens to the disabled archive mailbox when the deleted mailbox retention period is reached?"
     choices:
     - content: "The contents of the disabled archive mailbox are removed"
       isCorrect: false
-      explanation: "That's incorrect. This action isn't what happens when the deleted mailbox retention period is reached. Try again."
+      explanation: "That's incorrect. This action isn't what happens when the deleted mailbox retention period is reached."
     - content: "The disabled archive mailbox is purged from the mailbox database"
       isCorrect: true
       explanation: "That's correct. In on-premises deployments, a disabled archive mailbox is kept in the mailbox database until the deleted mailbox retention period for that database is reached. During this period, you can reconnect the same disabled archive mailbox to a user's primary mailbox. When the deleted mailbox retention period is reached, the disconnected archive mailbox is purged from the mailbox database."
     - content: "The disabled archive mailbox is kept in the mailbox database"
       isCorrect: false
-      explanation: "That's incorrect. This action isn't what happens when the deleted mailbox retention period is reached. Try again."
+      explanation: "That's incorrect. This action isn't what happens when the deleted mailbox retention period is reached."
   - content: "When journaling is implemented, what does the Journal agent do when a message matches a journal rule and is to be submitted to the journaling mailbox?"
     choices:
     - content: "It generates a journal report and attaches the message to the report"
       isCorrect: true
-      explanation: "A journal report is the message that the Journaling agent generates when a message matches a journal rule and is to be submitted to the journaling mailbox. The original message that matches the journal rule is included unaltered as an attachment to the journal report. The body of a journal report contains information from the original message such as the sender email address, message subject, message-ID, and recipient email addresses."
+      explanation: "That's correct. A journal report is the message that the Journaling agent generates when a message matches a journal rule and is to be submitted to the journaling mailbox. The original message that matches the journal rule is included unaltered as an attachment to the journal report. The body of a journal report contains information from the original message such as the sender email address, message subject, message-ID, and recipient email addresses."
     - content: "It stores the email message in the archive mailbox"
       isCorrect: false
-      explanation: "That's incorrect. This action isn't what the journal agent does in this scenario. Try again."
+      explanation: "That's incorrect. This action isn't what the journal agent does in this scenario."
     - content: "It sends an automatic email notification to the Compliance manager that contains information from the original message"
       isCorrect: false
-      explanation: "That's incorrect. This action isn't what the journal agent does in this scenario. Try again."
+      explanation: "That's incorrect. This action isn't what the journal agent does in this scenario."
