--- a/learn-m365-pr/wwl/manage-exchange-online-archiving-auditing/index.yml
+++ b/learn-m365-pr/wwl/manage-exchange-online-archiving-auditing/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.manage-exchange-online-archiving-auditing
 metadata:
   title: Manage Exchange Online archiving and auditing
   description: "Manage Exchange Online archiving and auditing"
-  ms.date: 03/09/2022
+  ms.date: 04/22/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -26,6 +26,7 @@ products:
 - office
 - office-365
 - office-exchange-server
+- office-exchange-online
 units:
 - learn.wwl.manage-exchange-online-archiving-auditing.introduction
 - learn.wwl.manage-exchange-online-archiving-auditing.plan-implement-place-archiving
