changed files by pdets auto publish service, publishid[c7ff09b6-1a17-43ae-bbf1-4e29e206607a] and do [publish].

--- a/learn-m365-pr/wwl/explore-messaging-compliance-microsoft-365/index.yml
+++ b/learn-m365-pr/wwl/explore-messaging-compliance-microsoft-365/index.yml
@@ -9,7 +9,7 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Explore messaging compliance in Microsoft 365
-summary: Examines the different Microsoft 365 compliance features that messaging administrators can use to comply with legal and regulatory requirements.
+summary: Examines the different Microsoft 365 Compliance portal features that messaging administrators can use to comply with legal and regulatory requirements.
 abstract: |
   By the end of this module, you'll be able to:
   - Describe different policy and compliance features for messaging.
