changed files by pdets auto publish service, publishid[ccaaf9f3-b20b-4958-9d36-35d5ebba8913] and do [publish].

--- a/learn-m365-pr/wwl/describe-productivity-solutions-microsoft-365/index.yml
+++ b/learn-m365-pr/wwl/describe-productivity-solutions-microsoft-365/index.yml
@@ -11,11 +11,11 @@ metadata:
 title: Describe productivity solutions in Microsoft 365
 summary: Learn about how the productivity solutions through Microsoft 365 help optimize operations, engage customers, and empower people to perform tasks in real-time from virtually anywhere.
 abstract: |
-  By the end of this module, you will be able to:
-  - Describe how the core tools in Microsoft 365 can increase productivity
-  - Describe how the Microsoft 365 Apps help people craft compelling content in real-time
-  - Describe how the capabilities of the work management tools optimize operations
-  - Describe the email and calendaring features with Microsoft Exchange
+  By the end of this module, you'll be able to:
+  *   Describe how the core tools in Microsoft 365 can increase productivity
+  *   Describe how the Microsoft 365 Apps help people craft compelling content in real-time
+  *   Describe how the capabilities of the work management tools optimize operations
+  *   Describe the email and calendaring features with Microsoft Exchange
 prerequisites: |
   - Familiarity with cloud computing concepts including deployment models and cloud service models, such as Software-as-a-Service (Saas).
 iconUrl: /learn/achievements/generic-badge.svg
