changed files by pdets auto publish service, publishid[4c29ff62-198e-41f7-ba4e-46833d7447e2] and do [publish].

--- a/learn-m365-pr/wwl/describe-endpoint-modernization-management-concepts-deployment-options/index.yml
+++ b/learn-m365-pr/wwl/describe-endpoint-modernization-management-concepts-deployment-options/index.yml
@@ -11,11 +11,11 @@ metadata:
 title: Describe endpoint modernization, management concepts, and deployment options in Microsoft 365
 summary: Learn about how the business management solutions through Microsoft 365 provide people with a secure, personalized desktop experience and help organizations easily manage updates for all devices with a simplified admin experience.
 abstract: |
-  By the end of this module, you will be able to:
-  - Describe the modern management capabilities of Microsoft Endpoint Manager
-  - Describe the different capabilities of Windows 365 and Azure Virtual Desktop
-  - Describe the deployment and release models for Windows-as-a-Service
-  - Describe the deployment and servicing methods for Microsoft 365 Apps
+  By the end of this module, you'll be able to:
+  *   Describe the modern management capabilities of Microsoft Endpoint Manager
+  *   Describe the different capabilities of Windows 365 and Azure Virtual Desktop
+  *   Describe the deployment and release models for Windows-as-a-Service
+  *   Describe the deployment and servicing methods for Microsoft 365 Apps
 prerequisites: |
   - Familiarity with cloud computing concepts including deployment models and cloud service models, such as Software-as-a -Service (Saas).
 iconUrl: /learn/achievements/generic-badge.svg
