changed files by pdets auto publish service, publishid[3581822a-30f7-413e-8786-ec192c3c71e6] and do [publish].

--- a/learn-m365-pr/wwl/describe-analytics-capabilities-microsoft-365/3-describe-capabilities-of-admin-center-user-portal.yml
+++ b/learn-m365-pr/wwl/describe-analytics-capabilities-microsoft-365/3-describe-capabilities-of-admin-center-user-portal.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn.wwl.describe-analytics-capabilities-microsoft-365.describe-capabilities-of-admin-center-user-portal
-title: Describe the capabilities of the Microsoft 365 Admin center and Microsoft 365 user portal
+title: Describe the capabilities of the Microsoft 365 admin center and Microsoft 365 user portal
 metadata:
-  title: Describe the capabilities of the Microsoft 365 Admin center and Microsoft 365 user portal
-  description: "Describe the capabilities of the Microsoft 365 Admin center and Microsoft 365 user portal"
+  title: Describe the capabilities of the Microsoft 365 admin center and Microsoft 365 user portal
+  description: "Describe the capabilities of the Microsoft 365 admin center and Microsoft 365 user portal"
   ms.date: 04/23/2022
   author: wwlpublish
   ms.author: asglenno
