--- a/learn-m365-pr/wwl/describe-analytics-capabilities-microsoft-365/4-describe-reports-available-admin-center-other-admin-centers.yml
+++ b/learn-m365-pr/wwl/describe-analytics-capabilities-microsoft-365/4-describe-reports-available-admin-center-other-admin-centers.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn.wwl.describe-analytics-capabilities-microsoft-365.describe-reports-available-admin-center-other-admin-centers
-title: Describe the reports available in the Microsoft 365 Admin center and other admin centers
+title: Describe the reports available in the Microsoft 365 admin center and other admin centers
 metadata:
-  title: Describe the reports available in the Microsoft 365 Admin center and other admin centers
-  description: "Describe the reports available in the Microsoft 365 Admin center and other admin centers"
+  title: Describe the reports available in the Microsoft 365 admin center and other admin centers
+  description: "Describe the reports available in the Microsoft 365 admin center and other admin centers"
   ms.date: 04/23/2022
   author: wwlpublish
   ms.author: asglenno
